fix(jdbc): wire getStatistic() on RefreshablePartitionedParquetTable so getPrimaryKeys/getImportedKeys work
CalciteMetaImpl.getPrimaryKeys() and getImportedKeys() both read from
Table.getStatistic(), but RefreshablePartitionedParquetTable never
overrode getStatistic(), so AbstractTable returned Statistics.UNKNOWN
and all constraint metadata was invisible to JDBC clients and the CBO.

Fix: override getStatistic() to delegate to the inner
PartitionedParquetTable (which has the full row-count heuristic plus
constraint keys) when it exists; fall back to building constraint-only
Statistic from the YAML constraintConfig when currentTable is null
(schema introspection before parquet files are discovered).

Also fixes pre-existing Java 9+ API violations (List.of / Map.of) in
TableConstraints and ApproxCountDistinct to respect
sourceCompatibility = JavaVersion.VERSION_1_8.

Adds ConstraintMetadataJdbcTest with four asserting tests covering
getPrimaryKeys, getImportedKeys, no-constraint empty case, and a CBO
smoke test. The one existing test that called getPrimaryKeys accepted
empty results as valid, which is why the regression was never caught.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>