@@ -28,6 +28,7 @@ import org.apache.calcite.schema.FunctionParameter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -91,7 +92,7 @@ public class ApproxCountDistinct { // Temporarily disabled - implements Aggregat
 
   public List<FunctionParameter> getParameters() {
     // This would be defined based on the SQL function signature
-    return List.of();
+    return Collections.emptyList();
   }
 
   public Accumulator createAccumulator() {
